[workspace]
members = [
    "tonic",
    "tonic-build",
    "tonic-health",
    "tonic-types",
    "tonic-reflection",
    "protoc-gen-tonic",

    # Non-published crates
    "examples",
    "interop",

    # Tests
    "tests/included_service",
    "tests/same_name",
    "tests/wellknown",
    "tests/wellknown-compiled",
    "tests/extern_path/uuid",
    "tests/ambiguous_methods",
    "tests/extern_path/my_application",
    "tests/integration_tests",
    "tests/stream_conflict",
]

[patch.crates-io]
prost = { git = "https://github.com/Tuetuopay/prost", branch = "protoc-gen-0.7" }
prost-build = { git = "https://github.com/Tuetuopay/prost", branch = "protoc-gen-0.7" }
prost-derive = { git = "https://github.com/Tuetuopay/prost", branch = "protoc-gen-0.7" }
prost-types = { git = "https://github.com/Tuetuopay/prost", branch = "protoc-gen-0.7" }
