[package]
name = "protoc-gen-tonic"
version = "0.4.2"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tonic-build/0.4.1/tonic_build/"
repository = "https://github.com/hyperium/tonic"
homepage = "https://github.com/hyperium/tonic"
description = """
Protoc plugin of `tonic` gRPC implementation.
"""
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.7", default-features = false }
prost-build = { version = "0.7" }
prost-types = { version = "0.7", default-features = false }
tonic-build = { version = "0.4", path = "../tonic-build" }
