[package]
name = "tonic-build"
version = "0.2.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tonic/0.2.0/tonic/"
repository = "https://github.com/hyperium/tonic"
homepage = "https://github.com/hyperium/tonic"
description = """
Codegen module of `tonic` gRPC implementation.
"""
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "async", "codegen", "protobuf"]


[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.prost-build]
git = "https://github.com/Tuetuopay/prost.git"
branch = "protoc-override"
optional = true

[features]
default = ["transport", "rustfmt", "prost"]
rustfmt = []
transport = []
prost = ["prost-build"]

[package.metadata.docs.rs]
all-features = true
